--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,31 @@
 bin
 bin/*
 bin/*.*
-*.xml
+data/
+data/*
+data/*.*
 *.txt
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+*.7z
+*.dmg
+*.gz
+*.iso
+*.rar
+*.tar
+*.zip
+*.log
+*.sql
+*.sqlite
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
