--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="lib/stax2-api-3.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/woodstox-core-lgpl-4.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/javolution-5.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/ejml-0.20.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
