--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,10 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/stax2-api-3.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/woodstox-core-lgpl-4.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/javolution-5.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/ejml-0.20.jar"/>
+	<classpathentry kind="lib" path="/jmatbench/lib/EJML.jar"/>
+	<classpathentry kind="lib" path="lib/Jama-1.0.2.jar"/>
+	<classpathentry kind="lib" path="lib/jscience.jar"/>
+	<classpathentry kind="lib" path="lib/ojalgo-32.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
