--- a/.classpath
+++ b/.classpath
@@ -5,9 +5,9 @@
 	<classpathentry kind="lib" path="lib/stax2-api-3.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/woodstox-core-lgpl-4.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/ejml-0.20.jar"/>
-	<classpathentry kind="lib" path="/jmatbench/lib/EJML.jar"/>
 	<classpathentry kind="lib" path="lib/Jama-1.0.2.jar"/>
 	<classpathentry kind="lib" path="lib/ojalgo-32.0.jar"/>
 	<classpathentry kind="lib" path="lib/javolution-6.0-20120909.204206-2.jar"/>
+	<classpathentry kind="lib" path="lib/parallelcolt-0.9.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
